--- a/portfolio_ideta/css/common.css
+++ b/portfolio_ideta/css/common.css
@@ -1,29 +1,31 @@
 @charset "UTF-8";
 
 body {
-  /* width: 1366px; */
   width: 100vw;
   background-color: #fffcf5;
-  /* background-color: #919191; */
 }
 
 main > section:nth-of-type(1) {
   background-image: url(../images/bg_1-80.jpg);
-  height: 100vh;
   background-repeat: no-repeat;
 }
+/* main {
+  background-image: url(../images/bg_1-80.jpg);
+  background-repeat: no-repeat;
+} */
 
-/* works3つの基準が白四角になっていてずれている
-  ボタンの上が400の上と揃う必要がある
-  →あとで調整 */
-/* 縦幅もレスポンシブするなら50%vh？ */
 .wrapper {
   height: 400px;
 }
 
 .scroll_section {
-  /* width: 100vw; */
   height: 100%;
+}
+
+@media screen and (max-width: 767px) {
+  .wrapper {
+    height: 650px;
+  }
 }
 
 /* ---------- フォント ---------- */
@@ -79,27 +81,20 @@ main > section:nth-of-type(1) {
 
 header {
   width: 6%;
-  /* width: 90px; */
   height: 100vh;
   background: #fffcf5;
   position: fixed;
   bottom: 0px;
   right: 0px;
   z-index: 10000;
-  display: flex; /* Flexboxを使用 */
-  justify-content: center; /* 水平方向の中央寄せ */
-  align-items: center; /* 垂直方向の中央寄せ */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-/* 上下200pxのmargin指定でとりあえず
-  画面幅小さくなると耐えられないが上下中央にできない */
 nav {
   writing-mode: vertical-rl;
   min-height: 400px;
-  /* display: flex; Flexboxを使用 */
-  /* flex-direction: column; 縦方向に配置 */
-  /* justify-content: center; 内部のアイテムを中央に配置 */
-  /* align-items: center; 内部のアイテムを中央に配置 */
 }
 
 li {
