--- a/portfolio_ideta/css/works_hp_detail.css
+++ b/portfolio_ideta/css/works_hp_detail.css
@@ -20,7 +20,8 @@ main > section:nth-of-type(1) {
 .top {
   width: 700px;
   /* width: 900px; */
-  margin-left: 150px;
+  margin-left: 15%;
+  margin-right: 100px;
   display: flex;
   height: 100%;
   align-items: center;
@@ -70,7 +71,7 @@ img {
   width: 128px;
   position: absolute;
   top: 346px;
-  left: 572px;
+  left: 575px;
 }
 
 .img_sp img {
@@ -82,7 +83,7 @@ img {
   height: 100%;
   align-items: center;
   gap: 23px;
-  margin-right: 30px;
+  margin-right: 10px;
 }
 
 table {
@@ -137,6 +138,17 @@ h2 {
   margin-left: 40px;
 }
 
+@media screen and (max-width: 1100px) {
+  .top {
+    margin-left: 8%;
+    margin-right: 0px;
+  }
+
+  .img_sp {
+    left: 505px;
+  }
+}
+
 .all {
   display: flex;
 }
@@ -150,6 +162,14 @@ h2 {
 .allpage p {
   writing-mode: vertical-rl;
   font-feature-settings: initial;
+}
+
+.allpage p:nth-of-type(1) {
+  margin-top: 90px;
+}
+
+.allpage p:nth-of-type(2) {
+  margin-top: 202px;
 }
 
 .allpage div {
