--- a/portfolio_ideta/css/style.css
+++ b/portfolio_ideta/css/style.css
@@ -491,7 +491,7 @@ h3 {
     /* height: 100%; */
     /* align-items: center; */
     /* background-image: url(../images/flower002.png); */
-    background-size: 33%;
+    background-size: 130px;
     /* background-repeat: no-repeat; */
     background-position: 12% 425px;
   }
@@ -601,7 +601,7 @@ h3 {
     /* height: 100%; */
     /* align-items: center; */
     /* background-image: url(../images/flower003.png); */
-    background-size: 33%;
+    background-size: 130px;
     /* background-repeat: no-repeat; */
     background-position: 12% 425px;
   }
@@ -696,7 +696,7 @@ h3 {
     /* height: 100%; */
     /* align-items: center; */
     /* background-image: url(../images/flower004.png); */
-    background-size: 33%;
+    background-size: 130px;
     /* background-repeat: no-repeat; */
     background-position: 12% 425px;
   }
