--- a/portfolio_ideta/css/about.css
+++ b/portfolio_ideta/css/about.css
@@ -22,8 +22,8 @@
   display: flex;
 }
 
-.profile .first_contents,
-.profile .second_contents,
+/* .profile .first_contents,
+.profile .second_contents, */
 .history .top_contents,
 .skills .top_contents,
 .strength .top_contents,
@@ -90,7 +90,7 @@ h2 {
   /* width: 200vw; */
   background-image: url(../images/flower00.png);
   background-repeat: no-repeat;
-  background-position: 57% bottom;
+  background-position: 52% bottom;
 }
 
 /* .profile .wrapper {
@@ -107,9 +107,9 @@ h2 {
 } */
 
 .profile .first_contents {
-  /* display: flex;
-  width: 100vw;
-  justify-content: center; */
+  display: flex;
+  width: 93vw;
+  justify-content: center;
   gap: 10%;
 }
 
@@ -128,7 +128,11 @@ h2 {
   text-align: justify;
 }
 
-.profile .txt:nth-of-type(2) p:nth-of-type(2) {
+.profile .second_contents {
+  width: 68vw;
+}
+
+.profile .second_contents p:nth-of-type(2) {
   font-size: 18px;
   color: #ec6c4e;
   width: 620px;
@@ -136,16 +140,29 @@ h2 {
 }
 
 @media screen and (max-width: 1100px) {
-  .profile .top_contents {
+  .profile {
+    background-size: 160px;
+  }
+
+  .profile .first_contents {
     gap: 7%;
   }
 
   .profile .txt {
-    width: 455px;
+    width: 503px;
+    padding-right: 0;
   }
 
   .profile .txt p {
     width: 503px;
+  }
+
+  .profile .second_contents {
+    width: 85vw;
+  }
+
+  .profile .second_contents p:nth-of-type(2) {
+    font-size: 16px;
   }
 }
 /* ---------- history ---------- */
