--- a/portfolio_ideta/css/works_hp.css
+++ b/portfolio_ideta/css/works_hp.css
@@ -52,6 +52,11 @@ main > section:nth-of-type(1) {
   margin: 0px auto;
 }
 
+.link {
+  display: flex;
+  align-items: flex-end;
+}
+
 a {
   width: 120px;
   height: 120px;
@@ -62,7 +67,7 @@ a {
   width: 120px;
   height: 120px;
   border-radius: 60px;
-  border: 1px solid #423732;
+  border: 1px solid #53c711;
   /* position: relative; */
 }
 
