--- a/portfolio_ideta/css/works_hp.css
+++ b/portfolio_ideta/css/works_hp.css
@@ -57,7 +57,7 @@ main > section:nth-of-type(1) {
   align-items: flex-end;
 }
 
-a {
+.link a {
   width: 120px;
   height: 120px;
   border-radius: 60px;
