--- a/portfolio_ideta/css/about.css
+++ b/portfolio_ideta/css/about.css
@@ -210,7 +210,7 @@ h2 {
   position: relative;
   width: 90px;
   height: 400px;
-  z-index: 0;
+  /* z-index: 0; */
 }
 
 h3 {
@@ -261,6 +261,8 @@ h3 {
 .history .content_last p {
   line-height: 1.5;
   letter-spacing: 0.025em;
+  position: relative;
+  z-index: 2;
 }
 
 .history .content_bottom {
@@ -275,6 +277,8 @@ h3 {
   width: 270px;
   border: 1px solid #fffcf5;
   margin: 0 auto;
+  position: relative;
+  z-index: 3;
 }
 
 .history .content_bottom p:nth-of-type(2) {
@@ -284,6 +288,8 @@ h3 {
   text-align: center;
   width: 270px;
   margin: 0 auto;
+  position: relative;
+  z-index: 4;
 }
 
 @media screen and (max-width: 1100px) {
